Hex encode instead of base64 because = can't appear in url